# weather_app

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: deploy.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
docs/: _config.yml  privacy_policy.md  terms_of_use.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/WeatherWidgetExtension/: Info.plist  WeatherWidget.swift  WeatherWidgetBundle.swift
lib/: main.dart
lib/models/: location_model.dart  settings_model.dart  weather_model.dart
lib/providers/: settings_provider.dart  weather_provider.dart
lib/screens/: home_screen.dart  settings_screen.dart  welcome_screen.dart
lib/services/: background_service.dart  cache_service.dart  geocoding_service.dart  location_service.dart  weather_service.dart  widget_service.dart
lib/utils/: units_utils.dart  weather_utils.dart
lib/widgets/: current_weather_card.dart  daily_forecast.dart  hourly_forecast.dart  location_search.dart  weather_details.dart  weather_icon.dart
linux/: CMakeLists.txt  weather_app.desktop
linux/flutter/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
macos/: Podfile
macos/Flutter/: Flutter-Debug.xcconfig
macos/Runner/: DebugProfile.entitlements  (+2 more)
web/: flutter_bootstrap.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  resource.h  runner.rc.in  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+33 files in other folders)
